@@ -1,9 +1,9 @@
+/*	$NetBSD: adler32.c,v 1.2 1996/09/13 00:29:54 cgd Exp $	*/
+
 /* adler32.c -- compute the Adler-32 checksum of a data stream
  * Copyright (C) 1995-1996 Mark Adler
  * For conditions of distribution and use, see copyright notice in zlib.h 
  */
-
-/* $Id: adler32.c,v 1.1.1.1 1996/09/12 15:33:09 gwr Exp $ */
 
 #include "zlib.h"
 
